fix(dashboard): refresh buttons partially covered by chart

--- a/src/assets/resources/css/main.css
+++ b/src/assets/resources/css/main.css
@@ -2410,6 +2410,7 @@ select-users {
   position: absolute;
   top: 0px;
   right: 0px;
+  z-index: 99999;
 }
 
 .badge-pill {
